# feoray

./: CHANGELOG.md  Cargo.toml  README.md
archive/: matrix_v2_single_generic.rs  matrix_v3_prohibits_Copy_trait.rs  tuple.rs
src/: camera.rs  canvas.rs  colour.rs  intersections.rs  lib.rs  main.rs  materials.rs  math.rs  matrix.rs  object.rs  point_light.rs  precomp.rs  primitives.rs  rays.rs  sphere.rs  transformers.rs  tuple.rs  world.rs
src/core/: camera.rs  canvas.rs  colour.rs  intersections.rs  matrix.rs  precomp.rs  rays.rs  transformers.rs  world.rs
src/lights/: point_light.rs
src/materials/: materials.rs  patterns.rs
src/primitives/: object.rs  plane.rs  primitives.rs  sphere.rs  test_shape.rs
