[package]
name = "feoray"
version = "0.0.10"
edition = "2021"
authors = ["Dylan Wright"]
description = "A CLI ray-tracer written in Rust."
rust-version = "1.68.0"

[lib]
doctest = false

[dev-dependencies]
assert_approx_eq = "1.1.0"

[dependencies]
image = "0.24.6"
nalgebra = "0.32.2"

[build]
target = ["x86_64-unknown-linux-gnu", "x86_64-pc-windows-gnu"]

[profile.dev]
opt-level = 1

[profile.test]
opt-level = 1

[profile.release]
strip = true      # Automagically strip symbols from the library
opt-level = "z"   # Highest optimisation
lto = true        # Enable link time optimisation
codegen-units = 1 # Maximise size reduction optimisation
panic = 'abort'   # Aborts on panic
